test/parsing/errors/invalidIndexExpr.compopts
--detailed-errors # invalidIndexExpr-detailed.good
--no-detailed-errors # invalidIndexExpr-brief.good
